@@ -22,6 +22,8 @@ Debuggers and Languages
 
 - Parsing of GDB breakpoint information has been improved. (2)
 
+- Parsing of Perl breakpoint information has been improved.
+
 
 Examining Data
 --------------
@@ -75,6 +77,7 @@ Thanks to:
     (5) Gary Cliff <gary.cliff@cdott.com>
     (6) Danny Van Elsen <Danny_Van_Elsen@village.uunet.be>
     (7) Philippe Midol-Monnet <Philippe.MIDOL-MONNET@airbus.aeromatra.com>
+
 
 DDD 3.2.1
 =========
